--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <p class="text-gray-400 text-sm">Customer Support Executive. Handling critical queries and ensuring seamless delivery experiences.</p>
                     </div>
                     <div class="absolute left-0 sm:left-[50%] top-0 sm:top-2 w-16 h-16 bg-white rounded-full border-4 border-gray-900 flex items-center justify-center -translate-x-1/2 shadow-[0_0_15px_rgba(40,116,240,0.5)] overflow-hidden">
-                        <img src="https://i.ibb.co/wNhT9Ndc/minutes.png" onerror="this.src='https://ibb.co/JRjNfRc3'" alt="Flipkart Minutes" class="w-full h-full object-cover p-1">
+                        <img src="https://i.ibb.co/2Y7nLYfy/minutes-cropped.png" onerror="this.src='https://ibb.co/JRjNfRc3'" alt="Flipkart Minutes" class="w-full h-full object-cover p-1">
                     </div>
                     <div class="pl-16 sm:hidden">
                         <h3 class="text-xl font-bold text-white">Flipkart Minutes</h3>
